--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: R.cache
-Version: 0.3.0
-Date: 2010-03-13
-Title: Fast and light-weight caching of objects
+Version: 0.4.0
+Date: 2011-02-14
+Title: Fast and light-weight caching (memoization) of objects
 Author: Henrik Bengtsson <henrikb@braju.com>
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
-Depends: R (>= 2.3.0), R.methodsS3 (>= 1.0.0), R.utils (>= 1.0.0)
-Suggests: digest (>= 0.3.0)
+Depends: R (>= 2.5.0), R.methodsS3 (>= 1.2.1), R.utils (>= 1.6.1)
+Suggests: digest (>= 0.4.2)
 Description: Methods for memoization, that is, caching arbitrary R objects in persistent memory.  Objects can be loaded and saved stratified on a set of hashing objects.
 License: LGPL (>= 2.1)
 URL: http://www.braju.com/R/
