--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 import("R.methodsS3")
 import("R.oo")
+import("R.utils")
 
 # Export all public methods, that is, those without a preceeding dot
 # in their names.
