--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,9 @@ export("addMemoization")
 export("memoizedCall")
 export("getCacheRootPath")
 export("setCacheRootPath")
+export("getCachePath")
 export("findCache")
 export("readCacheHeader")
 export("loadCache")
 export("saveCache")
+export("getChecksum")
