Now package only imports setMethodS3() and throw() from R.methodsS3.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/r-dots/pkg/R.cache@907 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,7 @@
-import("R.methodsS3")
+importFrom("R.methodsS3", "setMethodS3")
+importFrom("R.methodsS3", "throw")
 import("R.oo")
+
 import("R.utils")
 
 # Declare S3 methods
@@ -33,3 +35,6 @@ export("readCacheHeader")
 export("loadCache")
 export("saveCache")
 export("getChecksum")
+
+# To remove in R.cache (> 0.7.0)
+export("generateCache")
