--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: R.cache
-Version: 0.7.0
-Depends: R (>= 2.5.0)
+Version: 0.6.5
+Depends: R (>= 2.5.0), R.utils (>= 1.18.0)
 Imports: R.methodsS3 (>= 1.4.2), R.oo (>= 1.10.1), R.utils (>= 1.18.0)
 Suggests: digest (>= 0.5.2)
-Date: 2012-11-17
+Date: 2012-11-18
 Title: Fast and light-weight caching (memoization) of objects
 Author: Henrik Bengtsson <henrikb@braju.com>
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
