--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Suggests: digest (>= 0.6.0)
 Date: 2012-12-19
 Title: Fast and light-weight caching (memoization) of objects
 Authors@R: c(person("Henrik", "Bengtsson", email = "henrikb@braju.com", role = c("aut", "cre", "cph")))
-Author: Henrik Bengtsson <henrikb@braju.com>
+Author: Henrik Bengtsson
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Description: Methods for memoization, that is, caching arbitrary R objects in persistent memory.  Objects can be loaded and saved stratified on a set of hashing objects.
 License: LGPL (>= 2.1)
