--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: R.cache
-Version: 0.7.0
+Version: 0.7.1
 Depends: R (>= 2.5.0), R.utils (>= 1.25.2)
 Imports: R.methodsS3 (>= 1.4.4), R.oo (>= 1.13.9), R.utils (>= 1.25.2)
 Suggests: digest (>= 0.6.3)
-Date: 2013-07-03
-Title: Fast and light-weight caching (memoization) of objects
+Date: 2013-07-11
+Title: Fast and light-weight caching (memoization) of objects and results to speed up computations
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
 Author: Henrik Bengtsson
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
-Description: Methods for memoization, that is, caching arbitrary R objects in persistent memory.  Objects can be loaded and saved stratified on a set of hashing objects.
+Description: Memoization can be used to speed up repetitive and computational expensive function calls.  The first time a function is called the results are stored a cache memory.  The next time the function is called with the same set of parameters, the results are momentarily retrieved from the cache avoiding repeating the calculations.  More generally, arbitrary R objects can be cached in persistent memory using a set of hashing objects.
 License: LGPL (>= 2.1)
 LazyLoad: TRUE
