--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: R.cache
-Version: 0.7.1
-Depends: R (>= 2.5.0), R.utils (>= 1.25.2)
-Imports: R.methodsS3 (>= 1.4.4), R.oo (>= 1.13.9), R.utils (>= 1.25.2)
+Version: 0.7.2
+Depends: R (>= 2.5.0), R.utils (>= 1.26.2)
+Imports: utils, R.methodsS3 (>= 1.4.4), R.oo (>= 1.13.9), R.utils (>= 1.26.2)
 Suggests: digest (>= 0.6.3)
-Date: 2013-07-11
+Date: 2013-08-03
 Title: Fast and light-weight caching (memoization) of objects and results to speed up computations
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
