git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/r-dots/pkg/R.cache@1554 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
 Author: Henrik Bengtsson
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
-Description: Memoization can be used to speed up repetitive and computational expensive function calls.  The first time a function is called the results are stored a cache memory.  The next time the function is called with the same set of parameters, the results are momentarily retrieved from the cache avoiding repeating the calculations.  More generally, arbitrary R objects can be cached in persistent memory using a set of hashing objects.
+Description: Memoization can be used to speed up repetitive and computational expensive function calls.  The first time a function is called the results are stored in a cache memory.  The next time the function is called with the same set of parameters, the results are momentarily retrieved from the cache avoiding repeating the calculations.  More generally, arbitrary R objects can be cached in persistent memory using a set of hashing objects.
 License: LGPL (>= 2.1)
 LazyLoad: TRUE
