git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/r-dots/pkg/R.cache@1644 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importFrom("R.oo", "startupMessage")
 importFrom("R.oo", "getPosition")
 importFrom("R.oo", "attachLocally")
 importFrom("R.oo", "trim")
+importFrom("R.oo", "clearCache")
 
 importFrom("R.utils", "Arguments")
 importFrom("R.utils", "listDirectory")
