--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,22 +4,29 @@
 importFrom("R.methodsS3", "setMethodS3")
 importFrom("R.methodsS3", "throw")
 
-importFrom("utils", "packageVersion")
-
-importFrom("R.oo", "Package")
-importFrom("R.oo", "startupMessage")
-importFrom("R.oo", "attachLocally")
-importFrom("R.oo", "trim")
+## Importing generics
 importFrom("R.oo", "clearCache")
 
-importFrom("R.utils", "Arguments")
-importFrom("R.utils", "listDirectory")
+## Importing functions
+importFrom("R.oo", "attachLocally")
+importFrom("R.oo", "Package")
+importFrom("R.oo", "startupMessage")
+importFrom("R.oo", "trim")
+importFrom("R.utils", "cat") ## Multi-sources: R.utils, base
+importFrom("R.utils", "getOption") ## Multi-sources: R.utils, base
+importFrom("R.utils", "inherits") ## Multi-sources: R.utils, base
 importFrom("R.utils", "isAbsolutePath")
 importFrom("R.utils", "isDirectory")
 importFrom("R.utils", "isFile")
-importFrom("R.utils", "removeDirectory")
+importFrom("R.utils", "listDirectory")
 importFrom("R.utils", "mkdirs")
+importFrom("R.utils", "removeDirectory")
 importFrom("R.utils", "touchFile")
+importFrom("utils", "compareVersion")
+importFrom("utils", "packageVersion")
+
+# Manual imports
+importFrom("R.utils", "Arguments")
 
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
