Forgot to import attachLocally().
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/r-dots/pkg/R.cache@1764 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@
 importFrom("R.methodsS3", "setMethodS3")
 importFrom("R.methodsS3", "throw")
 
+## Importing Class:es
+importFrom("R.oo", "Package")
+
 ## Importing generics
 importFrom("R.oo", "clearCache")
 
 ## Importing functions
-importFrom("R.oo", "Package")
+importFrom("R.oo", "attachLocally")
 importFrom("R.oo", "startupMessage")
 importFrom("R.oo", "trim")
 importFrom("R.utils", "cat") ## Multi-sources: R.utils, base
