--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: R.cache
-Version: 0.8.3
+Version: 0.8.4
 Depends: R (>= 2.5.0)
-Imports: utils, R.methodsS3 (>= 1.5.2), R.oo (>= 1.15.6), R.utils (>= 1.27.5)
+Imports: utils, R.methodsS3 (>= 1.5.2), R.oo (>= 1.15.8), R.utils (>= 1.27.1)
 Suggests: digest (>= 0.6.3)
-Date: 2013-10-07
+Date: 2013-10-14
 Title: Fast and light-weight caching (memoization) of objects and results to speed up computations
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
-Author: Henrik Bengtsson
+Author: Henrik Bengtsson [aut, cre, cph]
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Description: Memoization can be used to speed up repetitive and computational expensive function calls.  The first time a function that implements memoization is called the results are stored in a cache memory.  The next time the function is called with the same set of parameters, the results are momentarily retrieved from the cache avoiding repeating the calculations.  With this package, any R object can be cached in a key-value storage where the key can be an arbitrary set of R objects.  The cache memory is persistent (on the file system).
 License: LGPL (>= 2.1)
