Ignoring more files
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/r-dots/pkg/R.cache@2146 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,10 @@
+^vignettes/.*[.](pdf|PDF)$
+^vignettes/.*[.](r|R)$
+^vignettes/[.]install_extras$
 ^Makefile$
 ^incl
-^NAMESPACE,.*.txt$
+^NAMESPACE,.*[.]txt$
+^nohup.*$
+^.travis.yml$
+^.svn
+^.git
