--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: R.cache
-Version: 0.9.5
+Version: 0.10.0
 Depends: R (>= 2.5.0)
-Imports: utils, R.methodsS3 (>= 1.6.1), R.oo (>= 1.18.0), R.utils (>= 1.29.8)
+Imports: utils, R.methodsS3 (>= 1.6.1), R.oo (>= 1.18.0), R.utils (>= 1.32.4)
 Suggests: digest (>= 0.6.4)
-Date: 2014-05-01
+SuggestsNote: Recommended: digest
+Date: 2014-06-10
 Title: Fast and light-weight caching (memoization) of objects and results to speed up computations
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
