--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: R.cache
-Version: 0.10.0
+Version: 0.11.0
 Depends: R (>= 2.5.0)
-Imports: utils, R.methodsS3 (>= 1.6.1), R.oo (>= 1.18.0), R.utils (>= 1.32.4)
-Suggests: digest (>= 0.6.4)
-SuggestsNote: Recommended: digest
-Date: 2014-06-10
+Imports: utils, R.methodsS3 (>= 1.6.1), R.oo (>= 1.18.0), R.utils (>= 1.33.0), digest (>= 0.6.4)
+Suggests: R.rsp
+Date: 2014-09-05
 Title: Fast and light-weight caching (memoization) of objects and results to speed up computations
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
