--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,14 @@
 Package: R.cache
 Version: 0.11.1-9000
-Depends: R (>= 2.5.0)
-Imports: utils, R.methodsS3 (>= 1.7.0), R.oo (>= 1.18.0), R.utils (>= 1.34.0), digest (>= 0.6.8)
-Date: 2015-02-27
+Depends:
+  R (>= 2.5.0)
+Imports:
+  utils,
+  R.methodsS3 (>= 1.7.0),
+  R.oo (>= 1.19.0),
+  R.utils (>= 2.1.0),
+  digest (>= 0.6.8)
+Date: 2015-11-10
 Title: Fast and Light-weight Caching (Memoization) of Objects and Results to Speed Up Computations
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
