--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,13 +3,25 @@
 #
 # REFERENCES:
 # * AppVeyor CI: https://ci.appveyor.com/
-# * r-travis: https://github.com/craigcitro/r-travis
+# * r-appveyor: https://github.com/krlmlr/r-appveyor
 #
 # Validate your .appveyor.yml file at
-# https://ci.appveyor.com/tools/validate-yaml 
+# https://ci.appveyor.com/tools/validate-yaml
 #----------------------------------------------------------------
 environment:
   _R_CHECK_FORCE_SUGGESTS_: false
+  USE_RTOOLS: false
+  
+  matrix:
+  - R_VERSION: devel
+    R_ARCH: x64
+
+  - R_VERSION: devel
+    R_ARCH: i386
+
+  - R_VERSION: release
+    R_ARCH: x64
+
 
 # DO NOT CHANGE the "init" and "install" sections below
 
@@ -17,24 +29,22 @@ environment:
 init:
   ps: |
         $ErrorActionPreference = "Stop"
-        Invoke-WebRequest https://raw.github.com/HenrikBengtsson/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
+        Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
+
 install:
-  ps: Bootstrap
+  ps: |
+        Bootstrap
+
+cache:
+  - C:\RLibrary -> appveyor.yml
 
 # Adapt as necessary starting from here
 
 build_script:
   - echo Current directory=%CD%
-
-
-
-
-
   - travis-tool.sh install_r digest R.methodsS3 R.oo R.utils
-
-
-
+ 
 test_script:
   - travis-tool.sh run_tests
 
@@ -48,14 +58,17 @@ artifacts:
   - path: '*.Rcheck\**\*.out'
     name: Logs
 
-  - path: all-Rout.zip
-    name: AllRout
+  - path: '*.Rcheck\**\*.fail'
+    name: Logs
 
   - path: '\*_*.tar.gz'
     name: Bits
 
   - path: '\*_*.zip'
     name: Bits
+
+  - path: all-Rout.zip
+    name: AllRout
 
 on_failure:
   - 7z a failure.zip *.Rcheck\*
