--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,15 +4,10 @@
 ^.svn
 ^.git
 ^.make
-^INSTALL[.]md$
-^OVERVIEW[.]md$
-^README[.]md$
-^CONDUCT[.]md$
-
-#----------------------------
-# devtools
-#----------------------------
-^revdep
+INSTALL[.]md
+OVERVIEW[.]md
+README[.]md
+CONDUCT[.]md
 
 #----------------------------
 # Travis-CI et al.
@@ -42,6 +37,7 @@ Rplots.pdf$
 ^[.]devel
 ^[.]test
 ^[.]check
+^revdep/*
 ^.*[.]tar[.]gz$
 
 #----------------------------
@@ -50,11 +46,3 @@ Rplots.pdf$
 ^[.]BatchJobs[.]R$
 [.]future
 
-#----------------------------
-# Miscellaneous
-#----------------------------
-^.ghi
-^.issues
-
-^.*\.Rproj$
-^\.Rproj\.user$
