--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export("getCacheRootPath")
 export("setCacheRootPath")
 export("getCachePath")
 export("findCache")
+export("generateCache")
 export("readCacheHeader")
 export("loadCache")
 export("saveCache")
