--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -4,10 +4,12 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
     if: "! contains(github.event.head_commit.message, '[ci skip]')"
+
     runs-on: ${{ matrix.config.os }}
 
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    
     strategy:
       fail-fast: false
       matrix:
@@ -21,7 +23,12 @@ jobs:
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+      R_FUTURE_RNG_ONMISUSE: error
+      _R_CHECK_LENGTH_1_CONDITION_: true
+      _R_CHECK_LENGTH_1_LOGIC2_: true
+      _R_CHECK_MATRIX_DATA_: true
       RSPM: ${{ matrix.config.rspm }}
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v2
@@ -51,8 +58,42 @@ jobs:
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
+      - name: Session info
+        run: |
+          options(width = 100)
+          pkgs <- installed.packages()[, "Package"]
+          sessioninfo::session_info(pkgs, include_base = TRUE)
+        shell: Rscript {0}
+        
       - name: Check
         env:
-          _R_CHECK_CRAN_INCOMING_REMOTE_: false
+          _R_CHECK_CRAN_INCOMING_: false
         run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
+        shell: Rscript {0}
+
+      - name: Upload check results
+        if: failure()
+        uses: actions/upload-artifact@master
+        with:
+          name: ${{ runner.os }}-r${{ matrix.config.r }}-results
+          path: check
+
+      - name: Test coverage - Install dependencies
+        if: runner.os == 'Linux' && matrix.config.r == 'release'
+        run: |
+            sudo apt-get install --yes libcurl4-openssl-dev
+            ## Workaround: 'curl' from RSPM fails to load; install from CRAN
+            Rscript -e "install.packages('curl', repos='https://cloud.r-project.org')"
+            Rscript -e "install.packages('covr')"
+            
+      - name: Test coverage
+        if: runner.os == 'Linux' && matrix.config.r == 'release'
+        run: |
+          ## 1. Get 'Repository Upload Token' from Codecov:
+          ##    https://app.codecov.io/gh/<org>/<repo>/settings
+          ## 2. Set 'CODECOV_TOKEN' in GitHub Secrets:
+          ##    https://github.com/<org>/<repo>/settings/environments/
+          coverage <- covr::package_coverage()
+          print(coverage)
+          covr::codecov(coverage = coverage, token="${{secrets.CODECOV_TOKEN}}")
         shell: Rscript {0}
