AppVeyor: R-devel no longer supports 32-bit Windows and for some reason it fails to load 'digest' because of this

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ environment:
   _R_CHECK_FORCE_SUGGESTS_: false
   USE_RTOOLS: false
   
-  matrix:
-  - R_VERSION: devel
-    R_ARCH: x64
+#  matrix:
+#  - R_VERSION: devel
+#    R_ARCH: x64
 
   - R_VERSION: release
     R_ARCH: x64
