--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -8,7 +8,7 @@ jobs:
 
     runs-on: ${{ matrix.config.os }}
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }}) ${{ matrix.config.label }}
     
     strategy:
       fail-fast: false
@@ -19,7 +19,7 @@ jobs:
           - {os: macOS-latest,   r: 'devel'   }
           - {os: macOS-latest,   r: 'release' }
           - {os: ubuntu-20.04,   r: 'devel',   rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          - {os: ubuntu-20.04,   r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-20.04,   r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest", covr: 'true', label: 'w/ covr' }
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -79,15 +79,13 @@ jobs:
           path: check
 
       - name: Test coverage - Install dependencies
-        if: runner.os == 'Linux' && matrix.config.r == 'release'
+        if: && matrix.config.covr == 'true'
         run: |
             sudo apt-get install --yes libcurl4-openssl-dev
-            ## Workaround: 'curl' from RSPM fails to load; install from CRAN
-            Rscript -e "install.packages('curl', repos='https://cloud.r-project.org')"
             Rscript -e "install.packages('covr')"
             
       - name: Test coverage
-        if: runner.os == 'Linux' && matrix.config.r == 'release'
+        if: matrix.config.covr == 'true'
         run: |
           ## 1. Get 'Repository Upload Token' from Codecov:
           ##    https://app.codecov.io/gh/<org>/<repo>/settings
